Fix spacing on scoreboard

--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     justify-content: space-evenly;
 }
-
 .gridData {
     font-weight: bold;
     color: #535353 !important;
@@ -182,12 +181,11 @@
     overflow: visible;
     align-items: left;
 }
-
-.chartContainer {}
-
+.chartContainer {
+}
 .chart .MuiPaper-root {
     padding: 25px;
-    width: 100%;
+    width:  100%;
     box-shadow: 0px 10px 30px #DEDEDE;
     border-radius: 15px;
 }
@@ -195,6 +193,7 @@
 .gridStyle {
     width: 20% !important;
     text-align: center;
+    padding: 24px 0px !important;
 }
 
 .gridUserStyle {
@@ -264,7 +263,6 @@ input[type="search"] {
     .chart {
         margin-bottom: 20px;
     }
-
     .chart .MuiPaper-root {
         padding: 15px;
     }
@@ -301,10 +299,6 @@ input[type="search"] {
         transition: opacity 0.25s ease-out;
     }
 
-    .ant-layout {
-        padding: 0px;
-    }
-
 }
 
 
@@ -314,10 +308,4 @@ input[type="search"] {
 
 .ant-layout-content {
     min-height: auto !important;
-}
-
-.scoreBoard .cardIcon {
-    display: block;
-    margin: 0 auto 5px;
-    height: 20px;
 }
